# hypermodernpy

./: pyproject.toml  sample.txt
src/hypermodernpy/: __init__.py  console.py
src/hypermodernpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
