[tool.poetry]
name = "hypermodernpy"
version = "0.1.0"
authors = ["Mohamed Abdellah <mohamed.ia@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mohamed-a/hypermodernpy"
repository = "https://github.com/mohamed-a/hypermodernpy"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodernpy = "hypermodernpy.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

